Bug 139142 - kdevelop 3.3.5-30 does not honor case in filenames when creating new project.
Summary: kdevelop 3.3.5-30 does not honor case in filenames when creating new project.
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: appwizard (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-12-22 21:56 UTC by ciscoaix
Modified: 2009-01-22 23:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ciscoaix 2006-12-22 21:56:14 UTC
Version:           3.3.5 (using KDE 3.5.5 "release 45" , openSUSE 10.2)
Compiler:          Target: x86_64-suse-linux
OS:                Linux (x86_64) release 2.6.18.2-34-default

I looked at 95540 but I don't think it relates to what I'm experiencing.

OS: SuSE 10.2

How to Reproduce:
create new project:
Application name: Foo
Location: /home/user/Projects/
Final location: /home/user/Projects/foo

My expectation is that if I use Foo, then the Final Location should also be Foo and not foo. See next item.

Expected Behaviour:
create new project:
Application name: Foo
Location: /home/user/Projects/
Final location: /home/user/Projects/Foo
Comment 1 Andreas Pakulat 2006-12-22 23:01:32 UTC
Hi, there was a reason for this, unfortunately the kdevelop devel's don't exactly remember it. And changing this this late in the release cycle (3.4.0 is going to be released in about a month) and possibly breaking existing projects is not an option.
Comment 2 ciscoaix 2006-12-29 22:35:51 UTC
--- Andreas Pakulat <apaku@gmx.de> wrote:

[bugs.kde.org quoted mail]
----------------------------------------------------------------------------
>              Status|UNCONFIRMED                
> |RESOLVED
>          Resolution|                           
> |WONTFIX
> 
> 
> 
> ------- Additional Comments From apaku gmx de 
> 2006-12-22 23:01 -------
> Hi, there was a reason for this, unfortunately the
> kdevelop devel's don't exactly remember it. And
> changing this this late in the release cycle (3.4.0
> is going to be released in about a month) and
> possibly breaking existing projects is not an
> option.
> 

Hi,
While I don't pretend to know everything about
kdevelop, what is it going to break?

As a side note, kdevelop wont even allow camel casing
in project names, for example kDevelop, it will only
produce kdevelop.

For the heck of it, I have tried  to seeif I could
find a work-around.
Created new PHP project.
 Went in to the project file that kdevelop creates and
editted .kdevelop file making the <dest> the location
that I really intended, changing it to the case that I
preferred (After all it's about preference). No
problems there.

Created a new C++ project based off the C++ hello
world:
Project to be named was cHelloWorld, but again
kdevelop says no, it's going to be chelloworld. Went
back in to .kdevelop file and changed the dest to be
cHelloWorld. Then went in to, of all places, the
.kdevses, and changed the <Doc0 NumberOfViews...> to
the preferred path. Found something in Doxyfile, had
to go in to that and edit it as well. I also noticed
that within the .kdevelop file that there are various
different cases of my project name, found under
<APPNAME>, <APPNAMELC>, and <APPNAMESC>. Rather odd
that somebody should even bother to present various
sorts of cases within the project configuration file
itself. After the edits, the project compiled and ran
fine.

Next I created a more complex sort of project, still
using KDevelop (excuse me, kdevelop) template. The
wxhello.
Again, went in and found anything that might point to
the file path of wxhello and changed to wxHello. The
program compiled without issue, and ran. No complaints
from kdevelop about missing anythings.

Then I figured, perhaps it is a DoxyGen problem, nope,
that seemed to create the documentation without issue.

Well, I hope that the developers look in to it, and
correct it in future releases, it's a shame that such
a simple thing has gone on for who knows how long.

Regards.

__________________________________________________
Do You Yahoo!?
Tired of spam?  Yahoo! Mail has the best spam protection around 
http://mail.yahoo.com 
Comment 3 Andreas Pakulat 2006-12-29 23:37:49 UTC
After some more discussion on IRC today we figured this is a bug and we will create a patch to allow for mixed-case project directories. 

However due to our release plans we will not directly put it into SVN, but post it here and on the kdevelop-devel list so we can get some testers.

Jens said that the problem might be with creating a CVS repository along with setting up a project.
Comment 4 Andreas Pakulat 2006-12-30 03:16:00 UTC
SVN commit 617732 by apaku:

Allow mixed case in new project names.
Adapt all parts that use projectName() because that now returns the name without the suffix. This actually makes kdevelop adhere to its own API now. (The API for kdevprojectmanager states that openProject takes the project name without suffix as 2nd argument)
This is tested with autotools, qmake and custom makefile projects as well as importing a new project into CVS (I couldn't test svn because that somehow doesn't work here).

If anybody finds problems that may be related to this change please email kdevelop-devel or come to IRC/#kdevelop.

BUG: 139142
CCMAIL: kdevelop-devel@kdevelop.org


 M  +26 -26    buildtools/ant/antprojectpart.cpp  
 M  +2 -2      buildtools/custommakefiles/customprojectpart.cpp  
 M  +30 -30    languages/cpp/cppsupportpart.cpp  
 M  +2 -2      languages/java/javasupportpart.cpp  
 M  +4 -2      parts/appwizard/appwizarddlg.cpp  
 M  +1 -1      parts/appwizard/appwizarddlg.h  
 M  +2 -2      parts/doxygen/doxygenpart.cpp  
 M  +11 -2     src/projectmanager.cpp  
 M  +1 -0      src/projectmanager.h