Allow mixed case in new project names. Adapt all parts that use projectName() because that now returns the name without the suffix. This actually makes kdevelop adhere to its own API now. (The API for kdevprojectmanager states that openProject takes the project name without suffix as 2nd argument) This is tested with autotools, qmake and custom makefile projects as well as importing a new project into CVS (I couldn't test svn because that somehow doesn't work here).

If anybody finds problems that may be related to this change please email kdevelop-devel or come to IRC/#kdevelop.

BUG: 139142
CCMAIL: kdevelop-devel@kdevelop.org