parts/doxygen/doxygenpart.cpp
@@ -195,10 +195,10 @@ void DoxygenPart::adjustDoxyfile()
   ConfigString *gen_tag = dynamic_cast<ConfigString*>(Config::instance()->get("GENERATE_TAGFILE"));
   if (gen_tag)
   {
-    gen_tag->setDefaultValue(QString(project()->projectName().remove(".kdevelop")+".tag").latin1());
+    gen_tag->setDefaultValue(QString(project()->projectName().lower().remove(".kdevelop")+".tag").latin1());
     gen_tag->init();
   }
-  
+
   // write doxy file
   QFile f2(fileName);
   if (!f2.open(IO_WriteOnly))
